--- a/engine/src/main/java/db.properties
+++ b/engine/src/main/java/db.properties
@@ -2,3 +2,5 @@ jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.jdbcUrl=jdbc:mysql://localhost:3306/crawler
 jdbc.user=root
 jdbc.password=root
+jdbc.initPoolSize=1
+jdbc.maxPoolSize=2
