--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<repository>
 			<id>jboss</id>
 			<name>JBoss Repository</name>
-			<url>http://repository.jboss.com/aven2/</url>
+			<url>http://repository.jboss.com/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -35,6 +35,11 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>aopalliance</groupId>
+			<artifactId>aopalliance</artifactId>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
