--- a/engine/src/main/java/initConfiguration.properties
+++ b/engine/src/main/java/initConfiguration.properties
@@ -5,7 +5,7 @@ THREAD_NUM=25
 CRAWLER_STRATEGY=BFS
 
 # page download path
-DOWNLOAD_PATH=D:/mirror/
+DOWNLOAD_PATH=snapshot/
 
 # crawler start or not
 START_CRAWLER=YES
