--- a/engine/src/main/java/initConfiguration.properties
+++ b/engine/src/main/java/initConfiguration.properties
@@ -4,6 +4,9 @@ THREAD_NUM=25
 # crawler strategy: dfs|bfs
 CRAWLER_STRATEGY=BFS
 
+# download charset
+DOWNLOAD_CHARSET=UTF-8
+
 # page download path
 DOWNLOAD_PATH=snapshot/
 
@@ -11,7 +14,7 @@ DOWNLOAD_PATH=snapshot/
 START_CRAWLER=YES
 
 # lucene index path
-LUCENE_PATH=date
+LUCENE_PATH=date/
 
 # lucene index lazy-init
 LUCENE_STRATEGY=NO
