--- a/engine/src/main/java/initConfiguration.properties
+++ b/engine/src/main/java/initConfiguration.properties
@@ -8,7 +8,7 @@ CRAWLER_STRATEGY=BFS
 DOWNLOAD_CHARSET=UTF-8
 
 # page download path
-DOWNLOAD_PATH=snapshot/
+DOWNLOAD_PATH=engine/resources/
 
 # crawler start or not
 START_CRAWLER=YES
