--- a/engine/src/main/java/initUrl.properties
+++ b/engine/src/main/java/initUrl.properties
@@ -1,2 +1,2 @@
-jy.hbut.edu.cn=http://jy.hbut.edu.cn/xyzp/13578921472.html
+jy.hbut.edu.cn=http://jy.hbut.edu.cn/xyzp/
 #job.hust.edu.cn=http://job.hust.edu.cn/show/recruitnews/jobnewslist.htm?page=1
