--- a/engine/src/main/java/initConfiguration.properties
+++ b/engine/src/main/java/initConfiguration.properties
@@ -1,5 +1,5 @@
 # crawler thread num
-THREAD_NUM=5
+THREAD_NUM=3
 
 # crawler strategy: dfs|bfs
 CRAWLER_STRATEGY=BFS
@@ -8,13 +8,13 @@ CRAWLER_STRATEGY=BFS
 DOWNLOAD_CHARSET=UTF-8
 
 # page download path
-DOWNLOAD_PATH=engine/resources/
+DOWNLOAD_PATH=snapshot
 
 # crawler start or not
 START_CRAWLER=YES
 
 # lucene index path
-LUCENE_PATH=date/
+LUCENE_PATH=date
 
 # lucene index lazy-init
 LUCENE_STRATEGY=NO
