--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<!-- 属性配置 -->
 	<properties>
+		<!-- spring版本 -->
 		<springframework.version>4.0.0.RELEASE</springframework.version>
 	</properties>
 
@@ -204,6 +205,28 @@
 			<groupId>org.htmlparser</groupId>
 			<artifactId>htmlparser</artifactId>
 			<version>2.1</version>
+		</dependency>
+
+		<!-- lucene依赖Jar包 -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-common</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-highlighter</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-queryparser</artifactId>
+			<version>6.1.0</version>
 		</dependency>
 	</dependencies>
 
