--- a/src/engine/java/initConfiguration.properties
+++ b/src/engine/java/initConfiguration.properties
@@ -8,13 +8,13 @@ CRAWLER_STRATEGY=BFS
 DOWNLOAD_CHARSET=UTF-8
 
 # page download path
-DOWNLOAD_PATH=snapshot
+DOWNLOAD_PATH=src/engine/resources/snapshot/
 
 # crawler start or not
 START_CRAWLER=YES
 
 # lucene index path
-LUCENE_PATH=date
+LUCENE_PATH=src/engine/resources/lucene
 
 # lucene index lazy-init
 LUCENE_STRATEGY=NO
